--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - './data/elk:/elk/data'
+      - ./data/elk:/elk/data
     ports:
       - 5314:5314
+    environment:
+      - NUXT_PUBLIC_DEFAULT_SERVER=tech.lgbt
+      - NUXT_PUBLIC_SINGLE_INSTANCE=true
